# Memori

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  conftest.py  environment.yml  pyproject.toml  setup.py  test.py
benchmarks/: README.md
core/: Cargo.toml  README.md
devrel/: .gitignore  ACADEMY-UPDATE.md  ALIGNMENT-SUMMARY.md  COURSES-COMPLETE.md  DX-FEEDBACK.md  GLEAN-INTERVIEW-SUMMARY.md  GLEAN.md  README.md  REBRANDING-COMPLETE.md  REVIEW.md  ai-assistants.html  community.html  ecosystem.html  glean-solution-architect-presentation.md  gleeees.html  index.html  learning-paths.html  memori-mcp.html  metrics-dashboard.html  portal.html  presentation.html  sdk-feedback-observability.html  sdk-feedback.html  swot-analysis.html  viewer.html
docs/: introduction.md  troubleshooting.md
examples/: crewai_integration.py
memori/: FIRST_CONTRIBUTION_STUDY_NOTES.md  __init__.py  __main__.py  _antigravity.py  _cli.py  _config.py  _network.py  _rust_core.py  _search.py  _setup.py  (+1 more)
memori-ts/: README.md  memori-test.db-shm  memori-test.db-wal  package-lock.json  package.json  tsconfig.json  vitest.config.ts
rust-core/: Cargo.toml  Makefile  README.md
rust-core/bindings/node/src/: lib.rs
rust-core/bindings/python/src/: lib.rs
rust-core/src/: lib.rs
rust-core/src/augmentation/: pipeline.rs
rust-core/src/embeddings/: api.rs  chunking.rs  models.rs  utils.rs
rust-core/src/network/: client.rs
rust-core/src/runtime/: worker.rs
rust-core/src/search/: api.rs  lexical.rs  similarity.rs
rust-core/tests/: retrieval_aa_contract.rs
(+483 files in other folders)
