[package]
name = "engine-orchestrator"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.86"

[dependencies]
thiserror.workspace = true
tokio.workspace = true
fastembed = "5"
tokenizers = { version = "0.19", features = ["http"] }
hf-hub = "0.5"
anyhow = "1.0"
serde_json = "1.0"
parking_lot = "0.12"
log = "0.4"
serde = "1.0.228"
base64 = "0.22"
# Note: We explicitly use default features (native-tls) instead of rustls-tls.
# rustls famously rejects corporate proxies/SSL inspection. native-tls ensures
# we use the OS-level trust store, guaranteeing Corporate VPN compatibility.
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
sha2 = "0.10"

[workspace]
members = [
    "bindings/node",
    "bindings/python",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
rust-version = "1.86"

[workspace.dependencies]
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
pyo3 = "0.27"
napi = "2"
napi-derive = "2"
napi-build = "2"
